New option to show or hide indication of currently active player.

--- a/html5/src/index.html
+++ b/html5/src/index.html
@@ -150,6 +150,15 @@ If not otherwise stated all graphics (independent of its format) are licensed un
           type='radio'>
         <label for='playerblueai'>AI</label>
       </fieldset>
+      <fieldset data-role='controlgroup'>
+        <legend>Current player is&#8230;</legend>
+        <input name='invert' id='indicateCurrentPlayer'
+          checked='checked' type='radio'>
+        <label for='indicateCurrentPlayer'>indicated</label>
+        <input name='invert' id='hideCurrentPlayer'
+          type='radio'>
+        <label for='hideCurrentPlayer'>not indicated</label>
+      </fieldset>
     </form>
     <a href='#' data-role='button' data-icon='check'
       data-rel='back' data-theme='c'>Ok</a>
